--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,11 +9,13 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
 
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.Black.NoTitleBar" >
         <activity
             android:name="com.ampvita.paybaq.StartActivity"
             android:label="@string/app_name" >
