--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -10,6 +10,8 @@
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    
     
     <application
         android:allowBackup="true"
