--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:theme="@android:style/Theme.Black.NoTitleBar" >
         <activity
             android:name="com.ampvita.paybaq.StartActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -29,25 +30,18 @@
         
         <activity
             android:name="com.ampvita.paybaq.MessageActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter> 
        			<action android:name="com.ampvita.paybaq.MessageActivity" />  
          		<category android:name="android.intent.category.DEFAULT" />  
      		</intent-filter> 
         </activity>
         
-        <activity
-            android:name="com.ampvita.paybaq.SelectActivity"
-            android:label="@string/app_name" >
-            <intent-filter> 
-       			<action android:name="com.ampvita.paybaq.SelectActivity" />  
-         		<category android:name="android.intent.category.DEFAULT" />  
-     		</intent-filter>
-        </activity>
-        
          <activity
             android:name="com.ampvita.paybaq.ViewRemindersActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"  >
             <intent-filter> 
        			<action android:name="com.ampvita.paybaq.ViewRemindersActivity" />  
          		<category android:name="android.intent.category.DEFAULT" />  
