--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -26,6 +26,10 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter> 
+       			<action android:name="com.ampvita.paybaq.StartActivity" />  
+         		<category android:name="android.intent.category.DEFAULT" />  
+     		</intent-filter> 
         </activity>
         
         <activity
@@ -44,6 +48,16 @@
             android:screenOrientation="portrait"  >
             <intent-filter> 
        			<action android:name="com.ampvita.paybaq.ViewRemindersActivity" />  
+         		<category android:name="android.intent.category.DEFAULT" />  
+     		</intent-filter>
+        </activity>
+        
+        <activity
+            android:name="com.ampvita.paybaq.DisplayMessageActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"  >
+            <intent-filter> 
+       			<action android:name="com.ampvita.paybaq.DisplayMessageActivity" />  
          		<category android:name="android.intent.category.DEFAULT" />  
      		</intent-filter>
         </activity>
