--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Black.NoTitleBar" >
+        android:theme="@android:style/Theme.Holo.NoActionBar" >
         <activity
             android:name="com.ampvita.paybaq.StartActivity"
             android:label="@string/app_name"
